Backend : add friend to group functionality
