# real_time/front_app/OpenApiSpec/OpenApiSpecification.json
@@ -506,6 +506,37 @@
         }
       }
     },
+    "/users/groups/{group-id}": {
+      "get": {
+        "tags": [
+          "user"
+        ],
+        "operationId": "getSpecGroup",
+        "parameters": [
+          {
+            "name": "group-id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GroupRespDto"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/users/groups/creator": {
       "get": {
         "tags": [
@@ -541,6 +572,57 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/PageResponseGroupRespDto"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/users/group/members/{groupId}": {
+      "get": {
+        "tags": [
+          "user"
+        ],
+        "operationId": "getGroupMembers",
+        "parameters": [
+          {
+            "name": "groupId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "default": 0
+            }
+          },
+          {
+            "name": "size",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "default": 5
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/PageResponseGroupMemberRespDto"
                 }
               }
             }
@@ -960,6 +1042,65 @@
             "type": "array",
             "items": {
               "$ref": "#/components/schemas/GroupRespDto"
+            }
+          },
+          "totalElements": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "totalPages": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "number": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "size": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "first": {
+            "type": "boolean"
+          },
+          "last": {
+            "type": "boolean"
+          }
+        }
+      },
+      "GroupMemberRespDto": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "member": {
+            "type": "string"
+          },
+          "joinedAt": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "status": {
+            "type": "string",
+            "enum": [
+              "ADMIN",
+              "MEMBER"
+            ]
+          },
+          "admin": {
+            "type": "boolean"
+          }
+        }
+      },
+      "PageResponseGroupMemberRespDto": {
+        "type": "object",
+        "properties": {
+          "content": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/GroupMemberRespDto"
             }
           },
           "totalElements": {
