# real_time/front_app/src/services/models/group-member-resp-dto.ts
@@ -1,0 +1,11 @@
+/* tslint:disable */
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+export interface GroupMemberRespDto {
+  admin?: boolean;
+  id?: number;
+  joinedAt?: string;
+  member?: string;
+  status?: 'ADMIN' | 'MEMBER';
+}
