# real_time/front_app/src/services/models/page-response-group-member-resp-dto.ts
@@ -1,0 +1,14 @@
+/* tslint:disable */
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+import { GroupMemberRespDto } from '../models/group-member-resp-dto';
+export interface PageResponseGroupMemberRespDto {
+  content?: Array<GroupMemberRespDto>;
+  first?: boolean;
+  last?: boolean;
+  number?: number;
+  size?: number;
+  totalElements?: number;
+  totalPages?: number;
+}
